--- a/apps/mediafusion/docker-compose.yml
+++ b/apps/mediafusion/docker-compose.yml
@@ -167,7 +167,7 @@ services:
       runtipi.managed: "true"
 
   mongodb:
-    image: mongo:latest
+    image: mongo:4.4
     container_name: mongodb
     restart: unless-stopped
     environment:
@@ -176,7 +176,7 @@ services:
       - ${APP_DATA_DIR}/mongodb:/data/db
     command: ["mongod", "--bind_ip_all"]
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      test: echo 'db.runCommand("ping").ok' | mongo localhost:27017/test --quiet
       interval: 10s
       timeout: 10s
       retries: 5
