--- a/apps/mediafusion/config.json
+++ b/apps/mediafusion/config.json
@@ -2,8 +2,8 @@
   "$schema": "../app-info-schema.json",
   "id": "mediafusion",
   "name": "MediaFusion+",
-  "version": "v4.2.0",
-  "tipi_version": 21,
+  "version": "4.3.35",
+  "tipi_version": 22,
   "available": true,
   "exposable": true,
   "dynamic_config": true,
