--- a/apps/mediafusion/docker-compose.yml
+++ b/apps/mediafusion/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   mediafusion:
-    image: mhdzumair/mediafusion:v4.2.0
+    image: mhdzumair/mediafusion:4.3.35
     container_name: mediafusion
     restart: unless-stopped
     depends_on:
