--- a/apps/jackettio/config.json
+++ b/apps/jackettio/config.json
@@ -3,7 +3,7 @@
   "id": "jackettio",
   "name": "Jackettio+",
   "version": "latest",
-  "tipi_version": 5,
+  "tipi_version": 6,
   "available": true,
   "exposable": true,
   "dynamic_config": true,
@@ -93,7 +93,10 @@
       "label": "TMDB Access Token",
       "env_variable": "TMDB_ACCESS_TOKEN",
       "placeholder": "Bearer token for TMDB API",
-      "hint": "The Movie Database access token for enhanced metadata (optional)."
+      "hint": "The Movie Database access token for enhanced metadata (optional).",
+      "min": 0,
+      "max": 500,
+      "required": false
     },
     {
       "type": "boolean",
