--- a/apps/czstreams/config.json
+++ b/apps/czstreams/config.json
@@ -1,15 +1,16 @@
 {
+  "$schema": "../app-info-schema.json",
   "name": "CzStreams",
-  "available": true,
   "port": 52932,
+  "available": true,
   "exposable": true,
   "dynamic_config": true,
-  "id": "czstreams-addon",
-  "description": "Stremio addon for Czech streaming services",
-  "tipi_version": 1,
+  "id": "czstreams",
+  "description": "Addon",
+  "tipi_version": 2,
   "version": "0.0.22",
   "categories": ["media"],
-  "short_desc": "Czech streams addon for Stremio",
+  "short_desc": "CZ Addon",
   "author": "Your Name",
   "source": "https://github.com/...",
   "form_fields": [
