--- a/apps/czstreams/config.json
+++ b/apps/czstreams/config.json
@@ -1,13 +1,13 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "CzStreams",
+  "name": "CzStreams+",
   "port": 52932,
   "available": true,
   "exposable": true,
   "dynamic_config": true,
   "id": "czstreams",
   "description": "Addon",
-  "tipi_version": 11,
+  "tipi_version": 12,
   "version": "0.0.22",
   "categories": ["media"],
   "short_desc": "CZ Addon",
