--- a/apps/torbox-media-center/docker-compose.yml
+++ b/apps/torbox-media-center/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - MOUNT_METHOD=${MOUNT_METHOD:-strm}
       - MOUNT_PATH=${MOUNT_PATH:-/torbox}
     volumes:
-      - ./data:/torbox
+      - ${APP_DATA_DIR}/data/torbox:/torbox
     networks:
       - tipi_main_network
     labels:
