--- a/apps/netbird/config.json
+++ b/apps/netbird/config.json
@@ -6,7 +6,7 @@
   "dynamic_config": true,
   "no_gui": true,
   "id": "netbird",
-  "tipi_version": 1,
+  "tipi_version": 2,
   "version": "latest",
   "categories": ["network", "security"],
   "description": "Connect your devices into a single secure private WireGuard®-based mesh network with SSO/MFA and simple access controls.",
@@ -32,9 +32,9 @@
     {
       "type": "text",
       "label": "DNS Resolver Address > Override default DNS port if needed",
-      "placeholder": "Default :53, use 127.0.0.1:5053",
+      "placeholder": "Default :22054, use 127.0.0.1:22054",
       "env_variable": "NB_DNS_RESOLVER_ADDRESS",
-      "hint": "Leave empty to use port 53 with auto-fallback to 5053. Set 127.0.0.1:5053 for Pi-hole/AdGuard conflics."
+      "hint": "Leave empty to use port 22054. Set 127.0.0.1:22054 for Pi-hole/AdGuard conflics."
     }
   ],
   "supported_architectures": ["arm64", "amd64"],
